# MECE-ClearVision

./: .gitignore  .gitmodules  CLAUDE.md  CLIFFNOTES.md  CMakeLists.txt  DISPLAY_CALIBRATION_RESEARCH.md  OAK_D_LITE_RESEARCH.md  README.md  USAGE.md  clearvision_demo.py  main.py  offaxis.py  pyproject.toml
cmake/: lz4Config.cmake
demos/: USAGE.md  face_landmarker_demo.py  head_coupled_offaxis.py  offaxis_projection_demo.py  yunet_test.cpp
docs/: dibr_left_view_artifacts.md  stereo_baseline_analysis.md
scripts/: download_facemesh.sh
src/: calibration.cpp  calibration.py  camera_capture.h  depth_pipeline.cpp  disp_invert.cu  disp_invert.h  face_tracker.cpp  face_tracker.h  oak_receiver.cpp  oak_receiver.h  oak_test.cpp  view_synthesis.cpp
src/models/: face_detection_yunet_2022mar.onnx
