[project]
name = "mece-clearvision"
version = "0.1.0"
description = "Head-tracked off-axis projection demo using MediaPipe and OpenGL"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0.0",
    "pygame>=2.5.0",
    "pyopengl>=3.1.0",
]
